--- a/src/Yoda/EventBundle/Resources/views/Default/index.html.twig
+++ b/src/Yoda/EventBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,11 @@
 {# a comment#}
 {% block  title 'Yay twiggy Goodnesss!!!!'%}
 {% block body %}
+    <h2>{{ event.name }}</h2>
+    {{ event.location }}
+    <hr>
     {% for i in 1..count %}
+
         <div>
             Hello <b>{{ firstName | upper }}</b>! #{{ i }}
             {% if i is odd %}
